# Maestria_Programacion

IA/Entregable1A-1B/: Entregable_2_B_Carlos_Andres_Arroyave.ipynb  Seguimiento_1_Carlos_Andres_Arroyave.ipynb
Python/: README.md
Python/Tarea4/concurrenciapythonrust/: pyproject.toml
Python/Tarea4/concurrenciapythonrust/src/concurrenciapythonrust/: brencmark.py  main.py
Python/Tarea4/concurrenciapythonrust/src/rustcrates/concurrenciapythonrustr/: Cargo.toml  pyproject.toml
Python/Tarea4/concurrenciapythonrust/src/rustcrates/concurrenciapythonrustr/src/: lib.rs
Python/Tarea4/concurrenciapythonrust/tests/: test_concurrencia.py
Python/p_concurrent/: pyproject.toml
Python/p_concurrent/src/p_concurrent/: main.py
Python/p_smallstatistic/: pyproject.toml
Python/p_smallstatistic/examples/: invocation.py
Python/p_smallstatistic/src/p_smallstatistic/: m_smallstatistic.py
Python/p_smallstatistics/src/p_smallstatistics/: m_smallstatistics.py
Python/smallstatistics/p_smallstatistics/: pyproject.toml
Python/smallstatistics/p_smallstatistics/example/: invocation.py
Python/tarea3/drones/: main.py  pyproject.toml
Python/tarea3/drones/drones/models/: commands.py
Python/tarea3/drones/tests/: test_commands.py  test_quadcopter.py  test_quadcopter_bencmark.py
Rust/p_smallstatistics/: Cargo.toml
Rust/p_smallstatistics/examples/: invocation.rs
Rust/p_smallstatistics/src/: lib.rs
Supervisados/: RegresionLinealSimplePolinomicaGuerrero.py  iris_dtree.py  iris_plot.py  linreg_poly_vs_degree.py  linreg_poly_vs_n.py
Supervisados/EntregaNumeroDos/: ModeloClasificacion.ipynb
Supervisados/EntregaNumeroUno/: RegresionLineal.ipynb  RegresionLinealCaarroya.ipynb
Supervisados/EntregaNumeroUno/Data/: FacturaXKilovatio.csv
Supervisados/Final/: CarlosArroyave_Final_PuntoDos.ipynb  CarlosArroyave_PuntoDosFinal.docx  Final_PreguntaUno.ipynb  diabetes.txt  nombres_latinos.csv  numeros_aleatorios.txt  ~$rlosArroyave_PuntoDosFinal.docx
Supervisados/Lab1/: 05.06-Linear-Regression.ipynb  ExploratyData.py  RegresionLinealSimple.py  RegresionLinealSimpleGausiana.py  RegresionLinealSimplePolinomica.py  linreg_residuals_plot.py
Supervisados/Lab2/: RegresionLinealKernel.ipynb
smallstatistics/p_smallstatistics/example/: invocation.py
smallstatistics/p_smallstatistics/src/p_smallstatistics/: m_smallstatistics.py
