[project]
name = "p-concurrent"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Arroyave",email = "67001576+caarroya@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[tool.poetry.dependencies]
p_smallstatistic = {path = "../p_smallstatistic/src/p_smallstatistic/m_smallstatistic" , develop=true }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
