[project]
name = "p-smallstatistic"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Arroyave",email = "67001576+caarroya@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "p_smallstatistic", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
